# Ubisoft_Develop_Proj

GameTest/: CMakeLists.txt  Camera.cpp  Camera.h  Cube.cpp  Cube.h  CubeTest.cpp  GameTest.cpp  GameTest.vcxproj  GameTest.vcxproj.filters  Geometry.cpp  Geometry.h  MatrixHelper.cpp  MatrixHelper.h  Object.cpp  Object.h  Spawner.cpp  Spawner.h
GameTest/x64/Debug/: GameTest.exe.recipe  GameTest.ilk  cubetest.obj.enc  vc143.idb
GameTest/x64/Debug/GameTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GameTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
